# Asiter-completo

./: .env.example  .gitignore  DEPLOY_VPS.md  SETUP_AUTH.md  docker-compose.yml
Asiter/: .dockerignore  .gitignore  Dockerfile  PROJECT_RULES.md  README.md  drizzle.config.ts  package.json  tailwind.config.ts
Asiter/drizzle/: 0000_furry_kylun.sql
Asiter/drizzle/meta/: 0000_snapshot.json  _journal.json
Asiter/src/: middleware.ts
Asiter/src/app/: globals.css  layout.tsx  page.tsx
Asiter/src/components/: UserMenu.tsx
Asiter/src/contexts/: ThemeContext.tsx
Asiter/src/docs/: Asiter cambios Front.excalidraw
Asiter/src/lib/: api.ts  auth.ts  better-auth-schema.ts  better-auth.ts  tdr-sections.ts  tdr-storage.ts  tdr-types.ts  tdr-validation.ts
Asiter/src/types/: better-sqlite3.d.ts  index.ts
backend/: .dockerignore  Dockerfile  alembic.ini  requirements.txt  run.ps1  test_payload.json
backend/alembic/: env.py
backend/app/: __init__.py  config.py  dependencies.py  main.py
backend/app/api/: auth.py  tdr.py
backend/app/db/: chroma.py  models.py  postgres.py  sql_models.py
backend/app/services/: embeddings.py  rag.py
backend/scripts/: import_tdrs.py  load_tdrs.py
tdr-extractor/: .env.example  README.md  batch_gemini.py  batch_process.py  pyproject.toml  requirements.txt  run.ps1  run.sh  test_extract.py  test_gemini.py
tdr-extractor/app/: __init__.py  config.py  deepseek_ocr_api.py  extractor.py  gemini_extractor.py  main.py  ocr.py
tdr-extractor/models/: __init__.py  responses.py
tdr-extractor/samples/: ejemplo_output.json
(+15 files in other folders)
